Fix the scrollbar jumps problem

--- a/styles/app.less
+++ b/styles/app.less
@@ -46,6 +46,10 @@ a:hover {
 	text-decoration: none;
 }
 
+html {
+       overflow-y: scroll;
+}
+
 body {
 	.container();
 	padding: 1em auto;
